# rfc

./: Cargo.toml  README.md
src/: cli.rs  error.rs  main.rs
src/rfc/: aes.rs  buf.rs  cipher.rs  encoding.rs  error.rs  file.rs  lz4.rs  mod.rs  pbkdf2.rs  wrapper.rs  zstd.rs
src/rfc/aes/: header.rs  mod.rs  raw.rs
src/rfc/encoding/: b64.rs  hex.rs  mod.rs
test_scripts/: test_rfc.sh
