[package]
name = "rfc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.2"
clap = { version = "4.3.0", features = ["derive"] }
rkyv = { version = "0.7.42", features = ["validation"] }
rpassword = "7.2.0"
thiserror = "1.0.40"
