[package]
name = "rfc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.2"
bincode = "1.3.3"
clap = { version = "4.3.0", features = ["derive"] }
derive = "1.0.0"
feature = "0.5.1"
rkyv = { version = "0.7.42", features = ["validation"] }
rpassword = "7.2.0"
serde = "1.0.163"
serde_json = "1.0.96"
thiserror = "1.0.40"
