[package]
name = "rfc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.2"
base64 = "0.21.2"
bincode = "1.3.3"
clap = { version = "4.3.0", features = ["derive"] }
derive = "1.0.0"
feature = "0.5.1"
password-hash = "0.5.0"
pbkdf2 = "0.12.1"
rand_core = { version = "0.6.4", features = ["std"] }
rkyv = { version = "0.7.42", features = ["validation"] }
rpassword = "7.2.0"
serde = "1.0.163"
serde_json = "1.0.96"
sha2 = "0.10.6"
thiserror = "1.0.40"
zstd = "0.12.3"
